# spoolsense-installer

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASING.md  TODO.md  install.py  install.sh  nvs_keys.csv  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  stale.yml  sync-changelog.yml
docs/superpowers/specs/: 2026-07-01-spoolman-extra-fields-robustness-design.md
spoolsense_installer/: __init__.py  config.py  constants.py  discovery.py  errors.py  files.py  firmware.py  middleware.py  nvs.py  preflight.py  spoolman.py  ui.py
spoolsense_installer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_dedup.py  test_discovery.py  test_firmware.py  test_install_summary.py  test_middleware.py  test_nvs.py  test_packaging.py  test_preflight.py  test_release_pinning.py  test_spoolman.py  test_ui_validators.py  test_update_manager.py  test_venv.py  test_week2_config.py
