[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "spoolsense-installer"
version = "1.4.0"
description = "Interactive CLI installer for the SpoolSense ecosystem — ESP32 scanner firmware + Klipper middleware"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.9"
dependencies = [
    "esptool>=4.6",
    "esp-idf-nvs-partition-gen>=0.1.2",
    "pyyaml>=6.0",
    "paho-mqtt>=1.6",
]

[project.urls]
Homepage = "https://github.com/SpoolSense/spoolsense-installer"
Documentation = "https://spoolsense.org"
Changelog = "https://github.com/SpoolSense/spoolsense-installer/blob/main/CHANGELOG.md"

[project.scripts]
spoolsense-install = "install:main"

[tool.setuptools]
packages = ["spoolsense_installer"]
py-modules = ["install"]
